@@ -64,6 +64,10 @@ What others wrote:
     
     
   </dd>
+  <dt>June 2005</dt>
+  <dd>
+    A French article on the LilyPond 2.6 release appeared on <a	href="http://linuxfr.org/2005/06/27/19210.html">linuxfr.org</a>.
+  </dd>      
   <dt>October 2004</dt>
   <dd>
     The editors of <em>Computer!Totaal</em>, a Dutch computer magazine, <a
@@ -81,11 +85,6 @@ What others wrote:
     and 
     <a href="http://www.linuxjournal.com/article.php?sid=7719">two</a>.
   </dd>
-  <dt>April 2004</dt>
-  <dd>
-    A French article on the LilyPond 2.2 release appeared on <a
-								href="http://linuxfr.org/2004/04/08/15968.html">linuxfr.org</a>.
-  </dd>      
   <dt>March 2004</dt>
   <dd>
     Chris Cannam interviewed Han-Wen Nienhuys and Jan Nieuwenhuizen on
